--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Myshop">
-        <activity android:name=".View.activity.cartlist"
+        <activity android:name=".View.activity.AddAddress"
+            android:screenOrientation="portrait"
+            android:theme="@style/Splash_Theme">
+
+        </activity>
+        <activity
+            android:name=".View.activity.Address"
+            android:screenOrientation="portrait"
+            android:theme="@style/Splash_Theme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".View.activity.cartlist"
             android:screenOrientation="portrait"
             android:theme="@style/Splash_Theme">
 
@@ -29,7 +45,9 @@
         <activity
             android:name=".View.activity.Settings"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash_Theme" />
+            android:theme="@style/Splash_Theme">
+
+        </activity>
         <activity
             android:name=".View.activity.Main"
             android:label="@string/title_activity_dashboard"
@@ -53,19 +71,15 @@
             android:name=".View.activity.Login"
             android:screenOrientation="portrait"
             android:theme="@style/Splash_Theme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
             android:name=".View.activity.Splash_Screen"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash_Theme" >
-           </activity>
-        <activity android:name=".MainActivity" >
+            android:theme="@style/Splash_Theme">
+
+        </activity>
+        <activity android:name=".MainActivity">
 
         </activity>
     </application>
