--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,27 +13,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Myshop">
-        <activity android:name=".View.activity.AddAddress"
+        <activity android:name=".View.activity.Checkout"
+            android:theme="@style/Splash_Theme"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash_Theme">
+            ></activity>
 
-        </activity>
+        <activity
+            android:name=".View.activity.AddAddress"
+            android:screenOrientation="portrait"
+            android:theme="@style/Splash_Theme"></activity>
         <activity
             android:name=".View.activity.Address"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash_Theme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Splash_Theme"></activity>
         <activity
             android:name=".View.activity.cartlist"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash_Theme">
-
-        </activity>
+            android:theme="@style/Splash_Theme"></activity>
         <activity
             android:name=".View.activity.DetailProduct"
             android:screenOrientation="portrait"
@@ -52,7 +48,11 @@
             android:name=".View.activity.Main"
             android:label="@string/title_activity_dashboard"
             android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".View.activity.CompleteProfile"
@@ -70,18 +70,12 @@
         <activity
             android:name=".View.activity.Login"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash_Theme">
-
-        </activity>
+            android:theme="@style/Splash_Theme"></activity>
         <activity
             android:name=".View.activity.Splash_Screen"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash_Theme">
-
-        </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
+            android:theme="@style/Splash_Theme"></activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
