--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,9 @@ dependencies {
     //coil
     implementation("io.coil-kt:coil:1.1.1")
     implementation 'com.github.Far5had70:PersianEditText:3.2.0'
+
+    //video player
+    implementation 'com.devbrackets.android:exomedia:4.0.0'
+    //easy permision
+    implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 }
