--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,6 @@ dependencies {
     implementation 'com.devbrackets.android:exomedia:4.0.0'
     //easy permision
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
+    //tour guide
+    implementation 'uk.co.samuelwall:material-tap-target-prompt:3.2.0'
 }
