--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -40,6 +39,8 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
+    implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation("androidx.benchmark:benchmark-junit4:1.0.0")
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -60,6 +61,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-firestore:23.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     //lottie
     implementation 'com.airbnb.android:lottie:3.6.0'
     //progressbar
@@ -81,11 +83,15 @@ dependencies {
     //video player
     implementation 'com.devbrackets.android:exomedia:4.0.0'
     //easy permision
-    implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
     //tour guide
     implementation 'uk.co.samuelwall:material-tap-target-prompt:3.2.0'
     //login with facebook
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.google.firebase:firebase-crash:16.2.1'
+
+
+
 }
