--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,8 @@ dependencies {
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
+    //photView
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
 
 
