add current location in AddAddress activity with new function insted of activityResualt🤞🤞

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
 
         <activity
             android:name=".View.activity.MapsActivity"
+            android:theme="@style/Splash_Theme"
             android:label="@string/title_activity_maps"/>
         <activity
             android:name=".View.activity.Splash_Screen"
