--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,7 @@ dependencies {
     implementation "androidx.browser:browser:1.3.0"
 
     implementation 'com.xwray:groupie:2.1.0'
-
+    implementation 'com.github.GrenderG:Toasty:1.5.0'
 
 
 
