--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,13 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    //android test unit
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    testImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation  "com.google.truth:truth:1.0.1"
     //fireBase
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -106,6 +110,7 @@ dependencies {
 
     implementation 'com.xwray:groupie:2.1.0'
     implementation 'com.github.GrenderG:Toasty:1.5.0'
+
 
 
 
