add google admob in main

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,26 +17,21 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:hardwareAccelerated="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Myshop">
+
+
         <activity android:name=".View.activity.All_chat"
             android:screenOrientation="portrait"
             android:theme="@style/Splash_Theme"
-            ></activity>
+           />
         <activity
             android:name=".View.activity.Chat"
             android:screenOrientation="portrait"
             android:theme="@style/Splash_Theme" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -92,9 +87,13 @@
             android:name=".View.activity.Settings"
             android:screenOrientation="portrait"
             android:theme="@style/Splash_Theme" />
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-1247202470884167~1194339930"/>
         <activity
             android:name=".View.activity.Main"
             android:label="@string/title_activity_dashboard"
+            android:hardwareAccelerated="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".View.activity.CompleteProfile"
