--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,8 @@ dependencies {
 
     implementation 'com.xwray:groupie:2.1.0'
     implementation 'com.github.GrenderG:Toasty:1.5.0'
+    //admob
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
 
 
 
